--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,35 +1,35 @@
-name: unit-tests
-on:
-  # Trigger the workflow on push or pull request,
-  # but only for the main/develop branch
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
-    branches:
-      - main
-      - develop
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: python-3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: install-dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        pip install -e .
-    - name: flake8
-      run: |
-        config/hooks/pre-commit
-    - name: print env
-      run: |
-        env
-    - name: pytest_and_coverage
-      run: |
-        pytest --cov=bigearthnet
+# name: unit-tests
+# on:
+#   # Trigger the workflow on push or pull request,
+#   # but only for the main/develop branch
+#   push:
+#     branches:
+#       - main
+#       - develop
+#   pull_request:
+#     branches:
+#       - main
+#       - develop
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: python-3.8
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.8
+#     - name: install-dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install flake8 pytest
+#         pip install -e .
+#     - name: flake8
+#       run: |
+#         config/hooks/pre-commit
+#     - name: print env
+#       run: |
+#         env
+#     - name: pytest_and_coverage
+#       run: |
+#         pytest --cov=bigearthnet
