--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -18,6 +18,10 @@ transforms:
   - _target_: torchvision.transforms.RandomVerticalFlip
     p: 0.5
 
+optimizer:
+  name: 'adam'
+  lr: 0.0001
+
 logger:
   save_dir: "../../tb_logs/"
   name: "bigearth"
