monitor best metrics and log hyper parameters

--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -26,6 +26,10 @@ logger:
   save_dir: "../../tb_logs/"
   name: "bigearth"
 
+monitor:
+  name: "precision"
+  mode: "max"
+
 trainer:
   max_epochs: 5
 
