--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -20,12 +20,12 @@ transforms:
     p: 0.5
 
 optimizer:
-  name: 'adam'
+  name: 'adam'  # adam or sgd
   lr: 0.0001
 
 logger:
   save_dir: "../../tb_logs/"
-  name: "bigearth"
+  name: "bigearthnet"
 
 monitor:
   name: "loss"
