--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,5 +26,5 @@ jobs:
           pip install -e .
       - name: end_to_end
         run: |
-          cd bigearthnet
-          python train.py ++datamodule.dataset_dir=$GITHUB_WORKSPACE/bigearthnet/bigearthnet/datasets/
+          cd $GITHUB_WORKSPACE
+          python train.py ++datamodule.dataset_dir=$GITHUB_WORKSPACE/datasets/
