--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,5 +26,5 @@ jobs:
           pip install -e .
       - name: end_to_end
         run: |
-          cd $GITHUB_WORKSPACE
+          cd bigearthnet
           python train.py ++datamodule.dataset_dir=$GITHUB_WORKSPACE/datasets/
