--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -1,5 +1,6 @@
 datamodule:
-  dataset_path: "${oc.env:HOME}/bigearthnet/bigearthnet/data/bigearthnet-mini/"
+  dataset_dir: "${oc.env:HOME}/bigearthnet/bigearthnet/datasets/"
+  dataset_name: "bigearthnet-mini"
   batch_size: 16
   num_workers: 0
 
@@ -19,12 +20,12 @@ transforms:
     p: 0.5
 
 optimizer:
-  name: 'adam'
+  name: 'adam'  # adam or sgd
   lr: 0.0001
 
 logger:
   save_dir: "../../tb_logs/"
-  name: "bigearth"
+  name: "bigearthnet"
 
 monitor:
   name: "loss"
