--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -4,21 +4,6 @@ datamodule:
   batch_size: 16
   num_workers: 0
 
-transforms:
-  - _target_: torchvision.transforms.Normalize
-    mean:
-      - 721.2257105159645  # B02
-      - 878.5158627345414  # B03
-      - 869.6805989741447  # B04
-    std:
-      - 1465.656553928543  # B02
-      - 1359.523897551790  # B03
-      - 1452.286444583796  # B04
-  - _target_: torchvision.transforms.RandomHorizontalFlip
-    p: 0.5
-  - _target_: torchvision.transforms.RandomVerticalFlip
-    p: 0.5
-
 optimizer:
   name: 'adam'  # adam or sgd
   lr: 0.0001
@@ -38,3 +23,4 @@ trainer:
 
 defaults:
   - model: baseline.yaml
+  - transforms: norm.yaml
