--- a/bigearthnet/configs/transforms/norm_resize_aug.yaml
+++ b/bigearthnet/configs/transforms/norm_resize_aug.yaml
@@ -1,15 +1,17 @@
-- _target_: torchvision.transforms.Normalize
-  mean:
-    - 721.2257105159645  # B02
-    - 878.5158627345414  # B03
-    - 869.6805989741447  # B04
-  std:
-    - 1465.656553928543  # B02
-    - 1359.523897551790  # B03
-    - 1452.286444583796  # B04
-- _target_: torchvision.transforms.Resize
-  size: 224
-- _target_: torchvision.transforms.RandomHorizontalFlip
-  p: 0.5
-- _target_: torchvision.transforms.RandomVerticalFlip
-  p: 0.5
+_target_: torchvision.transforms.Compose
+transforms:
+  - _target_: torchvision.transforms.Normalize
+    mean:
+      - 721.2257105159645  # B02
+      - 878.5158627345414  # B03
+      - 869.6805989741447  # B04
+    std:
+      - 1465.656553928543  # B02
+      - 1359.523897551790  # B03
+      - 1452.286444583796  # B04
+  - _target_: torchvision.transforms.Resize
+    size: 224
+  - _target_: torchvision.transforms.RandomHorizontalFlip
+    p: 0.5
+  - _target_: torchvision.transforms.RandomVerticalFlip
+    p: 0.5
