--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -36,8 +36,8 @@ callbacks:
     monitor: ${monitor.name}/val
     mode:  ${monitor.mode}
     patience: ${monitor.patience}
-  - _target_: bigearthnet.pl_modules.callbacks.ReproducibilityLogging
-  - _target_: bigearthnet.pl_modules.callbacks.MonitorHyperParameters
+  - _target_: bigearthnet.utils.callbacks.ReproducibilityLogging
+  - _target_: bigearthnet.utils.callbacks.MonitorHyperParameters
 
 trainer:
   _target_: pytorch_lightning.Trainer
