--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -1,24 +1,25 @@
 datamodule:
   _target_: bigearthnet.datamodules.bigearthnet_datamodule.BigEarthNetDataModule
-  dataset_dir: "${oc.env:HOME}/bigearthnet/bigearthnet/data/"
-  dataset_name: "bigearthnet-mini"
+  dataset_dir: "${oc.env:HOME}/bigearthnet/bigearthnet/data/" # root directory where to download the datasets
+  dataset_name: "bigearthnet-mini" # One of bigearthnet-mini, bigearthnet-medium, bigearthnet-full
   batch_size: 16
   num_workers: 0
   transforms: ${transforms.obj}
 
 optimizer:
   name: 'adam'  # adam or sgd
-  lr: 0.0001
+  lr: 0.0001  # learning rate
 
 logger:
+  # This project uses tensorboard as a logger.
   _target_: pytorch_lightning.loggers.TensorBoardLogger
   save_dir: "."
 
 monitor:
   # Keeps track of this value (from validation set) 
   # to determine when to do model selection, patience, etc. 
-  name: "loss"
-  mode: "min"
+  name: "f1_score" # loss, f1_score, precision, recall
+  mode: "max"  # min or max depending on metric, e.g. loss is min, f1_score is max
   patience: 10
 
 callbacks:
