--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -15,6 +15,9 @@ logger:
   _target_: pytorch_lightning.loggers.TensorBoardLogger
   save_dir: "."
 
+loss:
+  class_weights: null # specify a path to the class weights json file (see notebook for generating)
+
 monitor:
   # Keeps track of this value (from validation set) 
   # to determine when to do model selection, patience, etc. 
