--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-      - name: end_to_end
+      - name: unit_tests
+        run: |
+          pytest
+      - name: end_to_end_run
         run: |
           cd bigearthnet
           python train.py ++datamodule.dataset_dir=$GITHUB_WORKSPACE/datasets/
