--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,8 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .
       - name: unit_tests
-        run: |
-          pytest
+        run: pytest tests/*
       - name: end_to_end_run
         run: |
           cd bigearthnet
