--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -16,11 +16,10 @@ logger:
   save_dir: "."
 
 loss:
-  class_weights: null # specify a path to the class weights json file (see notebook for generating)
+  class_weights: null # specify a path to the class_weights.json file if you want to re-balance the loss. 
 
 monitor:
-  # Keeps track of this value (from validation set) 
-  # to determine when to do model selection, patience, etc. 
+  # Keeps track of this value to determine when to do model selection, patience, etc. 
   name: "f1_score" # loss, f1_score, precision, recall
   mode: "max"  # min or max depending on metric, e.g. loss is min, f1_score is max
   patience: 10
@@ -48,14 +47,15 @@ trainer:
   callbacks: ${callbacks}
   logger: ${logger}
   max_epochs: 3
-  profiler: "pytorch"
+  profiler: "pytorch"  # Profiles GPU usage, can be viewed in tensorflow
 
 experiment:
-  group: ???
-  seed: ???
+  group: ???  # Useful to group experiments when doing hyper-parameter tuning
+  seed: ???  # Set for reproducible experiments
 
 hydra:
   run:
+    # Specifies where to store all training aretefacts (model checkpoints, logs, results, etc.)
     dir: outputs/${datamodule.dataset_name}/${oc.select:experiment.group,default_group}/${now:%Y-%m-%dT%H:%M:%S}/${model.model_name}_lr_${optimizer.lr}_${optimizer.name}/
   sweep:
     dir: outputs/${datamodule.dataset_name}/${oc.select:experiment.group,default_group}/${now:%Y-%m-%dT%H:%M:%S}/multirun/
