Compute dataset statistics (#37)
* Compute class weights
* Support loading class weights for loss function via json file
* Compute mean and stddev on dataset
* Add simple unit tests
* add unit tests to CI
* Add pytest as a requirement

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-      - name: end_to_end
+      - name: unit_tests
+        run: pytest tests/*
+      - name: end_to_end_run
         run: |
           cd bigearthnet
           python train.py ++datamodule.dataset_dir=$GITHUB_WORKSPACE/datasets/
