change default root-dir of dataset

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,8 @@
 
 lightning_logs/
 outputs*/
-datasets/
+datasets/bigearthnet*
 .DS_Store
-
-bigearthnet/data/bigearthnet-mini/
-bigearthnet/data/bigearthnet-medium/
 
 *.tar
 
