--- a/bigearthnet/configs/config.yaml
+++ b/bigearthnet/configs/config.yaml
@@ -1,12 +1,9 @@
-dataset:
-  class_list: "${oc.env:HOME}/bigearthnet/bigearthnet/data/class_list.json" # class_list provided in the repo
-
 datamodule:
   _target_: bigearthnet.datamodules.bigearthnet_datamodule.BigEarthNetDataModule
-  dataset_dir: "${oc.env:HOME}/bigearthnet/datasets/" # root directory where to download the datasets
+  dataset_dir: "${oc.env:HOME}/bigearthnet/datasets/" # root directory where to download the datasets, overwrite via hydra to change
   dataset_name: "bigearthnet-mini" # One of bigearthnet-mini, bigearthnet-medium, bigearthnet-full
-  batch_size: 16
-  num_workers: 0
+  batch_size: 16 # Number of elements in a batch
+  num_workers: 0 # 0 is great for debugging, set it to higher if your machine has many CPUs
   transforms: ${transforms.obj}
 
 optimizer:
@@ -16,7 +13,7 @@ optimizer:
 logger:
   # This project uses tensorboard as a logger.
   _target_: pytorch_lightning.loggers.TensorBoardLogger
-  save_dir: "."
+  save_dir: "." # actual save_dir will be set by hydra
 
 loss:
   class_weights: null # specify a path to the class_weights.json file if you want to re-balance the loss. 
@@ -28,22 +25,22 @@ monitor:
   patience: 10
 
 callbacks:
-  - _target_: pytorch_lightning.callbacks.ModelCheckpoint
+  - _target_: pytorch_lightning.callbacks.ModelCheckpoint # checkpoints the last model
     save_top_k: 1
     monitor: "step"
     mode: "max"
     filename: "last-model"
-  - _target_: pytorch_lightning.callbacks.ModelCheckpoint
+  - _target_: pytorch_lightning.callbacks.ModelCheckpoint # checkpoints the best model according to val metric
     save_top_k: 1
     monitor: ${monitor.name}/val
     mode:  ${monitor.mode}
     filename: "best-model"
-  - _target_: pytorch_lightning.callbacks.EarlyStopping
+  - _target_: pytorch_lightning.callbacks.EarlyStopping # stops training after N epochs if val metric hasn't improved
     monitor: ${monitor.name}/val
     mode:  ${monitor.mode}
     patience: ${monitor.patience}
-  - _target_: bigearthnet.utils.callbacks.ReproducibilityLogging
-  - _target_: bigearthnet.utils.callbacks.MonitorHyperParameters
+  - _target_: bigearthnet.utils.callbacks.ReproducibilityLogging # logs useful system info
+  - _target_: bigearthnet.utils.callbacks.MonitorHyperParameters # monitors hyper parameters for tensorboard
 
 trainer:
   _target_: pytorch_lightning.Trainer
@@ -68,5 +65,5 @@ hydra:
 
 defaults:
   - _self_
-  - model: baseline.yaml
-  - transforms: norm.yaml
+  - model: baseline.yaml # uses the default baseline model when training
+  - transforms: norm.yaml # performs normalization as default transform
